--- a/css/main.css
+++ b/css/main.css
@@ -88,9 +88,98 @@ li{list-style: none;}
 .experience .content .banner .right .list li{line-height: 30px;font-size: 16px;position: relative;}
 .experience .content .banner .right .list li:before{content: "";position: absolute; top: 50%; transform:translateY(-50%);left: -10px; width: 5px; height: 5px;border-radius: 50%; background-color: #AF7464;}
 
-.production .content{max-width: 720px;left: 50%;transform: translateX(-50%);top: 140px}
-.production .content h4{color: #4985A0;margin: 5px 0;font-size: 20px;font-weight: bold}
-.production .content .content-des{padding: 14px;background-color: #fff;border-radius: 8px;height: 300px}
+/*.production .content{
+    max-width: 720px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 140px
+}
+.production .content h4{
+    color: #4985A0;
+    margin: 5px 0;
+    font-size: 20px;
+    font-weight: bold
+}
+.production .content .content-des{
+    padding: 14px;
+    background-color: #fff;
+    border-radius: 8px;
+    height: 300px
+}*/
+#productions {
+    position: relative;
+    width: 1200px;
+    margin: 0 auto
+}
+
+#productions .swiper-container {
+    padding-bottom: 60px;
+}
+
+#productions .swiper-slide {
+    width: 520px;
+    height: 408px;
+    background: #fff;
+    box-shadow: 0 8px 30px #ddd;
+}
+#productions  .swiper-slide img{
+    display:block;
+}
+#productions  .swiper-slide p {
+    line-height: 98px;
+    padding-top: 0;
+    text-align: center;
+    color: #636363;
+    font-size: 1.1em;
+    margin: 0;
+}
+
+#productions .swiper-pagination {
+    width: 100%;
+    bottom: 20px;
+}
+
+#productions .swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 5px;
+    border: 3px solid #4a839e;
+    background-color: #d5d5d5;
+    width: 10px;
+    height: 10px;
+    opacity: 1;
+}
+
+#productions .swiper-pagination-bullets .swiper-pagination-bullet-active {
+    border: 3px solid #00aadc;
+    background-color: #fff;
+}
+
+#productions .swiper-button-prev {
+    left: 0px;
+    width: 45px;
+    height: 45px;
+    background: url(../images/wm_button_icon.png) no-repeat;
+    background-position: 0 0;
+    background-size: 100%;
+}
+
+#productions .swiper-button-prev:hover {
+    background-position: 0 -46px;
+    background-size: 100%
+}
+
+#productions .swiper-button-next {
+    right: 0px;
+    width: 45px;
+    height: 45px;
+    background: url(../images/wm_button_icon.png) no-repeat;
+    background-position: 0 -93px;
+    background-size: 100%;
+}
+
+#productions .swiper-button-next:hover {
+    background-position: 0 -139px;
+    background-size: 100%
+}
 .content .content-des .intro,.content .content-des .responsibility,.content .content-des .tech{display: flex;margin-top: 18px}
 .content .content-des .item-title{max-width: 88px;font-weight: bold}
 .content .content-des .intro-des{flex: 1;margin-left: 10px;line-height: 25px}
