--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ li{list-style: none;}
     height: 330px;
     background: #fff;
     box-shadow: 0 8px 30px #ddd;
+    cursor: grab;
 }
 #productions  .swiper-slide img{
     display:block;
